# treadscan

./: .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml
RCNN_model/: KeypointRCNN_training.ipynb  README.md  coco_eval.py  saved_model.pth
RCNN_model/dataset/: info.txt
RCNN_model/dataset/annotations/: 1_000.json  1_001.json  1_002.json  1_003.json  1_004.json  1_006.json  1_007.json  1_008.json  1_009.json  1_010.json  1_011.json  1_012.json  1_013.json  1_014.json  1_016.json  1_017.json  1_018.json  1_020.json  1_021.json  1_023.json  1_024.json  1_025.json  1_027.json  1_028.json  1_029.json  1_031.json  1_032.json  1_033.json  1_034.json  1_038.json  1_039.json  1_040.json  1_041.json  1_043.json  1_044.json  1_045.json  1_047.json  1_048.json  1_049.json  1_050.json  (+111 more)
RCNN_model/dataset/test/annotations/: 000.json  001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json
RCNN_model/dataset/train/annotations/: 010.json  011.json  013.json  016.json  017.json  018.json  019.json  020.json  021.json  022.json  024.json  025.json  027.json  028.json  030.json  031.json  032.json  (+12 more)
docs/: conf.py  detector.rst  extractor.rst  index.rst  requirements.txt  utilities.rst
docs/source/: conf.py  detector.rst  extractor.rst  index.rst  segmentor.rst  utilities.rst
extras/: annotator.py  manual_annotation.py  model_annotation.py  treadscan_script.py
src/treadscan/: __init__.py  cwrap.pyx  detector.py  extractor.py  segmentor.py  utilities.py
