[metadata]
name = treadscan
version = 0.1.3
author = Daniel Bohuněk
author_email = bohundan@fit.cvut.cz
description = Tools for scanning tire tread(s).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bohundan/treadscan
project_urls =
    Bug Tracker = https://github.com/bohundan/treadscan/issues
    Documentation = https://treadscan.readthedocs.io/en/latest/index.html
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    improutils
    numpy
    opencv-contrib-python

[options.packages.find]
where = src
